scss/components/main-nav/_main-nav.scss
// Main Nav
//
// Markup: main-nav.html
//
// Styleguide components.main-nav

@import 'components/list-inline/list-inline';

.main-nav,
%main-nav {
  @extend %clearfix;
  @extend %palette-1;
  @extend %spacer__small;
  clear: both;
}

.main-nav_wrapper {
  margin-bottom: -.1rem;
  padding: .25rem .5rem 0;
  overflow: hidden;
}

.main-nav__list,
%main-nav__list {
  @extend %list-unstyled;
  @extend %link-no-underline__wrapper;
  @extend %font--small;
  line-height: 1.5rem !important;

  @include breakpoint($bp-large) {

    @include list-inline;
    margin: 0;
    float: right;
  }
}

.main-nav__sign-up,
%main-nav__sign-up{
  text-align: center;
  display: block;
  margin: auto;
  font-weight: bold;
  margin-bottom: 0.5rem;

  @include breakpoint(400px) {
    display: inline-block;
    float: left;
    font-weight: normal;
    margin: 0;
  }
}

.main-nav__icon,
%main-nav__icon {
  float: right;
  cursor: pointer;
  line-height: 0;

  @include breakpoint($bp-large) {
    display: none;
  }

  .main-nav__active & path {
    fill: #ffc0cb;
  }
}

.main-nav__search,
%main-nav__search {
  float: left;

  @include breakpoint(400px) {
    float: right;
    margin-right: .5rem;
    padding-right: .5rem;
    border-right: 1px solid #cccccc;
  }
}

.main-nav__search-text,
%main-nav__search-text {
  @extend %text-underline--hover;
  padding-left: .25rem;
}

// State for toggling nav


.main-nav__list,
%main-nav__list {
  display: none;

  .main-nav__active & {
    display: block;
  }

  @include breakpoint($bp-large) {
    display: block;
  }
}

